--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_vet_customers.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_vet_customers.xml
@@ -8,8 +8,116 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/vet_customers_adding_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/vet_customer_add_cancel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:text="Cancel"
+            android:backgroundTint="@color/background_red"
+
+            >
+        </Button>
+
+
+        <TextView
+            android:id="@+id/vet_customers_adding_text"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="52dp"
+            android:text="@string/AddCustomer"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/vet_customers_add_by_id_text"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="120dp"
+            android:text="@string/AddByID"
+            android:layout_marginStart="30dp"
+            android:textSize="25sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/vet_customers_adding_text" />
+
+
+        <EditText
+            android:id="@+id/vet_customer_add_id_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginTop="10dp"
+            android:inputType="text"
+            android:text="ID"
+            app:layout_constraintStart_toStartOf="@id/vet_customers_add_by_id_text"
+            app:layout_constraintTop_toBottomOf="@id/vet_customers_add_by_id_text" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:backgroundTint="#4CAF50"
+            android:text="Submit"
+            app:layout_constraintBottom_toBottomOf="@+id/vet_customer_add_id_input"
+            app:layout_constraintStart_toEndOf="@+id/vet_customer_add_id_input"
+            app:layout_constraintTop_toTopOf="@+id/vet_customer_add_id_input" />
+
+
+        <TextView
+            android:id="@+id/vet_customers_add_by_email_text"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="200dp"
+            android:text="@string/AddByEmail"
+            android:layout_marginStart="30dp"
+            android:textSize="25sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/vet_customers_add_by_id_text" />
+
+        <EditText
+            android:id="@+id/vet_customer_add_email_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginTop="10dp"
+            android:inputType="text"
+            android:text="Email"
+            app:layout_constraintStart_toStartOf="@id/vet_customers_add_by_email_text"
+            app:layout_constraintTop_toBottomOf="@id/vet_customers_add_by_email_text" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:backgroundTint="#4CAF50"
+            android:text="Submit"
+            app:layout_constraintBottom_toBottomOf="@+id/vet_customer_add_email_input"
+            app:layout_constraintStart_toEndOf="@+id/vet_customer_add_email_input"
+            app:layout_constraintTop_toTopOf="@+id/vet_customer_add_email_input" />
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/vet_customers_regular_layout"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="match_parent">
 
         <Button
