--- a/Frontend/CyDropFrontend/app/src/main/res/layout/activity_meds.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/activity_meds.xml
@@ -7,6 +7,19 @@
     android:padding="16dp"
     android:background="#f8f9fa">
 
+    <!-- Button to go back to previous page -->
+    <Button
+        android:id="@+id/btn_return"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|top"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="#673AB7"
+        android:padding="8dp"
+        android:text="Return"
+        android:textColor="#FFFFFF" />
+
     <!-- Header Text -->
     <TextView
         android:id="@+id/tv_header"
