--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_customer.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_customer.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/rounded_rectangle"
-    android:animateLayoutChanges="true"
     android:layout_marginTop="10dp"
     tools:context=".PetCardFragment">
 
@@ -13,8 +12,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card_customer_collapsed_layout"
         android:layout_width="match_parent"
-        android:visibility="gone"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/card_customer_name"
@@ -30,15 +29,14 @@
 
 
         <Button
-            android:id="@+id/card_pet_edit_button"
+            android:id="@+id/card_customer_expand_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
             android:text="Expand"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/card_customer_name"
             app:layout_constraintBottom_toBottomOf="@id/card_customer_name"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/card_customer_name" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -47,10 +45,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card_customer_expanded_layout"
         android:layout_width="match_parent"
-        android:visibility="visible"
         android:layout_height="match_parent"
-        android:paddingBottom="10dp"
-        >
+        android:paddingBottom="10dp">
 
         <TextView
             android:id="@+id/card_customer_editing_title"
@@ -61,8 +57,8 @@
             android:layout_marginBottom="10dp"
             android:text="Customer name"
             android:textSize="30sp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -71,9 +67,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="15dp"
-            android:textSize="30sp"
             android:paddingBottom="10dp"
             android:text="Pets:"
+            android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/card_customer_editing_title" />
 
@@ -82,13 +78,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="70dp"
-            android:layout_marginEnd="50dp"
             android:layout_marginTop="10dp"
-            app:layout_constraintStart_toEndOf="@id/card_customer_pet_list_text"
+            android:layout_marginEnd="50dp"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/card_customer_pet_list_text"
-            android:orientation="vertical">
-        </LinearLayout>
+            app:layout_constraintStart_toEndOf="@id/card_customer_pet_list_text"
+            app:layout_constraintTop_toTopOf="@id/card_customer_pet_list_text"></LinearLayout>
 
         <Button
             android:id="@+id/card_customer_edit_inspect_button"
@@ -104,29 +99,29 @@
         <Button
             android:id="@+id/card_customer_edit_remove_customer_button"
             android:layout_width="wrap_content"
-            android:backgroundTint="@color/background_red"
             android:layout_height="wrap_content"
-            android:textSize="11dp"
-            android:text="Remove customer"
-            android:layout_marginEnd="10dp"
             android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@id/card_customer_pet_list_linear_layout"
+            android:padding="12dp"
+            android:layout_marginEnd="10dp"
+            android:backgroundTint="@color/background_red"
+            android:text="Remove customer"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/card_customer_pet_list_linear_layout"
 
             />
 
         <Button
             android:id="@+id/card_customer_edit_collapse_button"
             android:layout_width="wrap_content"
-            android:backgroundTint="@color/grey"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:backgroundTint="@color/grey"
             android:text="Collapse"
-            app:layout_constraintTop_toTopOf="@id/card_customer_edit_remove_customer_button"
             app:layout_constraintBottom_toBottomOf="@id/card_customer_edit_remove_customer_button"
             app:layout_constraintStart_toEndOf="@id/card_customer_edit_inspect_button"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp"
- />
+            app:layout_constraintTop_toTopOf="@id/card_customer_edit_remove_customer_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
