--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_vet_customers.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_vet_customers.xml
@@ -16,16 +16,15 @@
             android:id="@+id/vet_customer_add_cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="10dp"
             android:layout_marginStart="5dp"
-            android:text="Cancel"
+            android:layout_marginBottom="15dp"
             android:backgroundTint="@color/background_red"
+            android:text="Cancel"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-            >
-        </Button>
+            </Button>
 
 
         <TextView
@@ -44,9 +43,9 @@
             android:id="@+id/vet_customers_add_by_id_text"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="120dp"
             android:text="@string/AddByID"
-            android:layout_marginStart="30dp"
             android:textSize="25sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/vet_customers_adding_text" />
@@ -56,14 +55,15 @@
             android:id="@+id/vet_customer_add_id_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_marginTop="10dp"
+            android:ems="10"
             android:inputType="text"
-            android:text="ID"
+            android:hint="ID"
             app:layout_constraintStart_toStartOf="@id/vet_customers_add_by_id_text"
             app:layout_constraintTop_toBottomOf="@id/vet_customers_add_by_id_text" />
 
         <Button
+            android:id="@+id/vet_customer_add_by_id_submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -78,9 +78,9 @@
             android:id="@+id/vet_customers_add_by_email_text"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="200dp"
             android:text="@string/AddByEmail"
-            android:layout_marginStart="30dp"
             android:textSize="25sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/vet_customers_add_by_id_text" />
@@ -89,14 +89,15 @@
             android:id="@+id/vet_customer_add_email_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_marginTop="10dp"
+            android:ems="10"
             android:inputType="text"
-            android:text="Email"
+            android:hint="Email"
             app:layout_constraintStart_toStartOf="@id/vet_customers_add_by_email_text"
             app:layout_constraintTop_toBottomOf="@id/vet_customers_add_by_email_text" />
 
         <Button
+            android:id="@+id/vet_customer_add_by_email_submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -105,7 +106,6 @@
             app:layout_constraintBottom_toBottomOf="@+id/vet_customer_add_email_input"
             app:layout_constraintStart_toEndOf="@+id/vet_customer_add_email_input"
             app:layout_constraintTop_toTopOf="@+id/vet_customer_add_email_input" />
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -117,7 +117,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/vet_customers_regular_layout"
         android:layout_width="match_parent"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_height="match_parent">
 
         <Button
@@ -125,11 +125,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:padding="9dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="15dp"
             android:backgroundTint="#4CAF50"
-            android:textSize="10dp"
             android:text="Add customer"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
